changed default unit to rem

--- a/src/styles/config/_feature-flags.scss
+++ b/src/styles/config/_feature-flags.scss
@@ -29,5 +29,5 @@ $feature-flags: (
 $generate-utility-classes: false !default;
 $enable-dark-mode: true !default;
 $enable-debugger: false !default;
-$default-unit: px !default;
+$default-unit: rem !default;
 $parent-selector: "" !default;
